统一使用Config去获取 代码项目路径
