# src/AterStudio/swagger.json
@@ -490,15 +490,6 @@
         "operationId": "Entity_GetDtos",
         "parameters": [
           {
-            "name": "projectId",
-            "in": "query",
-            "description": "",
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
             "name": "entityName",
             "in": "query",
             "description": "",
@@ -548,15 +539,6 @@
         "summary": "获取文件内容\r\nentity/manager",
         "operationId": "Entity_GetFileContent",
         "parameters": [
-          {
-            "name": "projectId",
-            "in": "query",
-            "description": "",
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
           {
             "name": "entityName",
             "in": "query",
